Deinterlace hotkey crashes

Deinterlace seems to systematically crash when playing audio only:

AddressSanitizer:DEADLYSIGNAL
=================================================================
==74116==ERROR: AddressSanitizer: SEGV on unknown address 0x0068e1c3bbc0 (pc 0x7f3ceb6d331b bp 0x7f3ce1c3b940 sp 0x7f3ce1c3b0d0 T10)
==74116==The signal is caused by a READ memory access.
    #0 0x7f3ceb6d331b in __interceptor_strcmp ../../../../src/libsanitizer/sanitizer_common/sanitizer_common_interceptors.inc:461
    #1 0x7f3ce1e965a2 in vout_CycleVariable ../../modules/control/hotkeys.c:807
    #2 0x7f3ce1e971c5 in action_handler_VoutDeinterlace ../../modules/control/hotkeys.c:922
    #3 0x7f3ce1e9814d in handle_action ../../modules/control/hotkeys.c:1083
    #4 0x7f3ce1e99a4c in ActionCallback ../../modules/control/hotkeys.c:1249
    #5 0x7f3ceac6986a in TriggerCallback ../../src/misc/variables.c:252
    #6 0x7f3ceac721a4 in var_SetChecked ../../src/misc/variables.c:712
    #7 0x7f3ceabf8850 in var_SetInteger ../../include/vlc_variables.h:297
    #8 0x7f3ceabfa2c3 in vlc_key_to_action ../../src/misc/actions.c:438
    #9 0x7f3ceac6986a in TriggerCallback ../../src/misc/variables.c:252
    #10 0x7f3ceac721a4 in var_SetChecked ../../src/misc/variables.c:712
    #11 0x7f3cdbc78b24 in var_SetInteger ../../include/vlc_variables.h:297
    #12 0x7f3cdbc8bf9a in MainCtx::sendHotkey(Qt::Key, QFlags<Qt::KeyboardModifier>) ../../modules/gui/qt/maininterface/mainctx.cpp:376
    #13 0x7f3cdbc66841 in InterfaceWindowHandler::eventFilter(QObject*, QEvent*) ../../modules/gui/qt/maininterface/interface_window_handler.cpp:197
    #14 0x7f3cd730b6a1 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2b06a1)
    #15 0x7f3cd7de66dd in QApplicationPrivate::notify_helper(QObject*, QEvent*) (/usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5+0x1636dd)
    #16 0x7f3cd730b939 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2b0939)
    #17 0x7f3cd76e5251 in QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent*) (/usr/lib/x86_64-linux-gnu/libQt5Gui.so.5+0x138251)
    #18 0x7f3cd76bf22b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/x86_64-linux-gnu/libQt5Gui.so.5+0x11222b)
    #19 0x7f3cd245d7d9  (/usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5+0x6d7d9)
    #20 0x7f3cd6861faa in g_main_context_dispatch (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x53faa)
    #21 0x7f3cd6862257  (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x54257)
    #22 0x7f3cd686230e in g_main_context_iteration (/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x5430e)
    #23 0x7f3cd7362e83 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x307e83)
    #24 0x7f3cd730a33a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2af33a)
    #25 0x7f3cd731261f in QCoreApplication::exec() (/usr/lib/x86_64-linux-gnu/libQt5Core.so.5+0x2b761f)
    #26 0x7f3cdb44f015 in Thread ../../modules/gui/qt/qt.cpp:864
    #27 0x7f3ce9b0cd7f in start_thread nptl/pthread_create.c:481
    #28 0x7f3ce9a26bae in clone ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Edited by Rémi Denis-Courmont