hotkeys: don't assume "deinterlace-mode" exists

Fixes #27179.